--- a/login page.html/index.html
+++ b/login page.html/index.html
@@ -5,7 +5,7 @@
   <style>
      body{
       font-family: Arial;
-      background:#f2f2f2;
+      background:lightblue;
       text-align:center;
     }
     .box{
